--- a/customTab/index.html
+++ b/customTab/index.html
@@ -1,129 +1,160 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Omni post-message receiver</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Product post-message receiver</title>
     <style>
-        body {
-            font-family: monospace;
-            background: #f8f8f8;
-            color: #333333;
-            padding: 2em;
-        }
+      body {
+        font-family: monospace;
+        background: #f8f8f8;
+        color: #333333;
+        padding: 2em;
+      }
 
-        textarea, input, .asInput {
-            padding: 1em;
-            border-radius: 3px;
-            border: 1px solid #adadad;
-            outline: 1px solid #777777;
-            background-color: white;
-        }
+      textarea,
+      input,
+      .asInput {
+        padding: 1em;
+        border-radius: 3px;
+        border: 1px solid #adadad;
+        outline: 1px solid #777777;
+        background-color: white;
+      }
 
-        textarea {
-            width: 100%;
-            resize: vertical;
-            box-sizing: border-box;
-            background: white url(https://omni.ru/src/assets/fav/apple-icon-57x57.png) no-repeat 100% 100%;
-        }
+      textarea {
+        width: 100%;
+        resize: vertical;
+        box-sizing: border-box;
+      }
 
-        #time {
-            color: dimgrey;
-        }
+      #time {
+        color: dimgrey;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <details open>
-        <summary>Omni post-message receiver</summary>
-        <br>
-        <div id="time"></div>
-        <textarea id="lastData" rows="20" placeholder="Sent OmniChildReady first!!!" readonly>
-
-        </textarea>
+      <summary>Product post-message receiver</summary>
+      <br />
+      <div id="time"></div>
+      <textarea
+        id="lastData"
+        rows="20"
+        placeholder="Sent ProductChildReady first!!!"
+        readonly
+      >
+      </textarea>
     </details>
-    <br><br>
-    <hr>
-    <br><br>
+    <br /><br />
+    <hr />
+    <br /><br />
     <details open>
-        <summary>Omni post-message sender</summary>
-        <br>
-        <form id="form">
-            <input placeholder="command" required id="command"  list="commands">
-            <input placeholder="payload (can be json)" id="commandData" list="payloads">
-            <input type="submit">
-            <datalist id="commands">
-                <option value="OmniChildReady">
-                <option value="OmniRequestChanged">
-                <option value="OmniClientSelected">
-            </datalist>
-            <datalist id="payloads">
-                <option value='{ "ClientId": "External-id-client-example-12346" }'>
-            </datalist>
-            <span style="padding: 1em" id="formRes"></span>
-        </form>
+      <summary>Product post-message sender</summary>
+      <br />
+      <form id="form">
+        <input placeholder="command" required id="command" list="commands" />
+        <input
+          placeholder="payload (can be json)"
+          id="commandData"
+          list="payloads"
+        />
+        <input type="submit" />
+        <datalist id="commands">
+          <option value="ProductChildReady"></option>
+          <option value="ProductRequestChanged"></option>
+          <option value="ProductClientSelectedForLink"></option>
+          <option value="ProductClientSelectedForAssign"></option>
+        </datalist>
+
+        <datalist id="payloads">
+          <option
+            value='{ "ClientId": "External-id-client-example-12346" }'
+          ></option>
+        </datalist>
+
+        <span style="padding: 1em" id="formRes"></span>
+      </form>
     </details>
 
     <script>
-        function postMessageListener(event) {
-            // if (event.origin != 'http://ourTrustedDomain.ru') {
-            //     // что-то прислали с неизвестного домена - проигнорируем..
-            //     return;
-            // }
+      function postMessageListener(event) {
+        // if (event.origin != 'http://ourTrustedDomain.ru') {
+        //     // что-то прислали с неизвестного домена - проигнорируем..
+        //     return;
+        // }
 
-            const { action = null, payload = null } = JSON.parse(event.data);
+        const { action = null, payload = null } = JSON.parse(event.data);
 
-            switch (action) {
-                case 'OmniRequestChanged':
-                    document.getElementById('time').innerText = new Date().toLocaleString();
-                    document.getElementById('lastData').value = JSON.stringify(payload, null, '  ');
-                    console.warn('Received OmniRequestChanged event with data', payload);
-                    break;
+        switch (action) {
+          case 'ProductRequestChanged':
+            document.getElementById('time').innerText =
+              new Date().toLocaleString();
+            document.getElementById('lastData').value = JSON.stringify(
+              payload,
+              null,
+              '  ',
+            );
+            console.warn(
+              'Received ProductRequestChanged event with data',
+              payload,
+            );
+            break;
 
-                default:
-                    console.warn('Received not Omni event')
-            }
+          default:
+            console.warn('Received not Product event');
         }
+      }
 
-        window.addEventListener("message", postMessageListener);
+      window.addEventListener('message', postMessageListener);
 
-        // Sending
+      // Sending
 
-        const renderFormResult = (str, title) => {
-            const el = document.getElementById('formRes');
-            el.textContent = str;
-            el.setAttribute('title', title);
-            setTimeout(() => {
-                el.textContent = '';
-                el.setAttribute('title', '');
-            }, 5000);
+      const renderFormResult = (str, title) => {
+        const el = document.getElementById('formRes');
+        el.textContent = str;
+        el.setAttribute('title', title);
+        setTimeout(() => {
+          el.textContent = '';
+          el.setAttribute('title', '');
+        }, 5000);
+      };
+
+      const sendPostMessage = (str) => {
+        if (window.parent) {
+          window.parent.postMessage(
+            str,
+            document.referrer.length > 0 ? document.referrer : undefined,
+          );
+          return;
         }
+        window.postMessage(str);
+        console.warn('Send post message', str);
+      };
 
-        const sendPostMessage = (str) => {
-            if (window.parent) {
-                window.parent.postMessage(str, document.referrer.length > 0 ? document.referrer : undefined);
-                return;
-            }
-            window.postMessage(str);
-            console.warn('Send post message', str);
+      document.getElementById('form').onsubmit = (e) => {
+        e.preventDefault();
+        try {
+          const command = document.getElementById('command').value;
+          const cd = document.getElementById('commandData').value;
+          const commandData = cd.startsWith('{') ? JSON.parse(cd) : cd;
+
+          const str = JSON.stringify(
+            { action: command, payload: commandData },
+            null,
+            '  ',
+          );
+          sendPostMessage(str);
+          renderFormResult('✔ Success!', str);
+        } catch (e) {
+          renderFormResult('❌ Error!', e.message);
+          throw e;
         }
-
-        document.getElementById('form').onsubmit = (e) => {
-            e.preventDefault();
-            try {
-                const command = document.getElementById('command').value;
-                const cd = document.getElementById('commandData').value;
-                const commandData = cd.startsWith('{') ? JSON.parse(cd) : cd;
-
-                const str = JSON.stringify({ action: command, payload: commandData }, null, '  ');
-                sendPostMessage(str);
-                renderFormResult('✔ Success!', str)
-            } catch (e) {
-                renderFormResult('❌ Error!', e.message)
-                throw e;
-            }
-        }
+      };
     </script>
-</body>
+  </body>
 </html>
