--- a/customTab/counter.html
+++ b/customTab/counter.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Omni Counter</title>
+    <title>Product Counter</title>
     <style>
         * {
             font-family: monospace;
@@ -79,7 +79,7 @@
         form.onsubmit = (e) => {
             e.preventDefault();
 
-            const command = 'OmniSetCounter';
+            const command = 'ProductSetCounter';
             const commandData = {
                 siteId: siteId.value,
                 count: counterInp.value
