--- a/requestClose/index.html
+++ b/requestClose/index.html
@@ -77,7 +77,7 @@
             const { action = null, payload = null } = JSON.parse(event.data);
 
             switch (action) {
-                case 'OmniRequestChanged':
+                case 'ProductRequestChanged':
 
                     requestDataPre.innerHTML = [
                         ['Заголовок', payload.requestData.title],
@@ -106,11 +106,11 @@
                     ).join('\n');
 
   
-                    console.info('Received OmniRequestChanged event with data', payload);
+                    console.info('Received ProductRequestChanged event with data', payload);
                     break;
 
                 default:
-                    console.warn('Received not Omni event', { action, payload })
+                    console.warn('Received not Product event', { action, payload })
             }
         }
 
@@ -132,7 +132,7 @@
         setTimeout(() => {
             loaderDiv.classList.add('d-none');; // hide loader
 
-            const str = JSON.stringify({ action: 'OmniChildReady', payload: '' }, null, '  ');
+            const str = JSON.stringify({ action: 'ProductChildReady', payload: '' }, null, '  ');
             sendPostMessage(str);
 
             mainDiv.classList.remove('d-none');
@@ -141,13 +141,13 @@
 
         sampleForm.onsubmit = (e) => {
             e.preventDefault();
-            const str = JSON.stringify({ action: 'OmniRequestActionProcessed', payload: exampleFormControl.value }, null, '  ');
+            const str = JSON.stringify({ action: 'ProductRequestActionProcessed', payload: exampleFormControl.value }, null, '  ');
             sendPostMessage(str);
         }
 
         sampleForm.onreset = (e) => {
             e.preventDefault();
-            const str = JSON.stringify({ action: 'OmniRequestActionError', payload: exampleFormControl.value }, null, '  ');
+            const str = JSON.stringify({ action: 'ProductRequestActionError', payload: exampleFormControl.value }, null, '  ');
             sendPostMessage(str);
         }
 
