--- a/videorecorder/index.html
+++ b/videorecorder/index.html
@@ -14,12 +14,12 @@
         audio : {
           mandatory: {
               echoCancellation: true,
-              chromeMediaSource: 'desktop'
+              //chromeMediaSource: 'desktop'
             }
         },
         video: {
           mandatory: {
-            chromeMediaSource: 'desktop',
+            //chromeMediaSource: 'desktop',
             maxFrameRate: 16
           },
 
