--- a/integration/my-url.html
+++ b/integration/my-url.html
@@ -30,7 +30,7 @@
 
     dl {font-size: 1.5rem; margin: 0;}
 
-    dt {color: darkred; font-weight: bolder;   font-family: "Grenze Gotisch", serif;
+    dt {color: darkred; font-weight: bolder;   font-family: "Grenze Gotisch", "Ponomar", serif;
   font-optical-sizing: auto;}
   </style>
 </head>
