--- a/perf-view/index.html
+++ b/perf-view/index.html
@@ -12,8 +12,8 @@
     
     <div style="display: flex; gap:16px">
       <label>
-        Файлы логов:
-        <input type="file" multiple id="filesInp" />
+        Файлы логов или har:
+        <input type="file" multiple id="filesInp" accept="*.log,*.har"/>
       </label>
       <label>
         keep-alive:
