--- a/requestCloseConditionally/index.html
+++ b/requestCloseConditionally/index.html
@@ -132,7 +132,7 @@
                     }
 
                     if (searchParams.get('checkMode')) {
-                        sampleForm.submit();
+                        sampleForm.requestSubmit(submitButton);
                     }
                     
   
